update SComputers docs

--- a/SComputers/api.html
+++ b/SComputers/api.html
@@ -48,6 +48,7 @@
             <a class="hyper" href="./lag_policy.html"><li><span>lag policy</span></li></a>
             <!--<a class="hyper" href="./scriptableOS.html"><li><span>scriptableOS</span></li></a>-->
             <a class="hyper" href="./scmframework.html"><li><span>scmframework (a framework for creating mods based on SComputers)</span></li></a>
+            <a class="hyper" href="./canvasAPI.html"><li><span>canvasAPI (embed displays from SComputers in your mods)</span></li></a>
         </ul>
 
         <br/>
