--- a/SComputers/env.html
+++ b/SComputers/env.html
@@ -168,8 +168,8 @@ function callback_loop() end</code>
         <br/><p class="text">clientInvoke(code: str, args...) - performs invokation some code on clients (unsafe mode only)</p>
         <br/><p class="text">clientInvokeTo(player_nickname/playerobj, code: str, args...) - performs invokation some code on client (unsafe mode only)</p>
 		<br/><p class="text">serverInvoke(code: str, args...) - calls the code on the server side from the client. available only from the code executed from clientInvoke (unsafe mode only)</p>
-        <br/><p class="text">input(color: [str | nil]) -> bool - input selector (if color specified); returns true if one on selected inputs is true else returns false</p>
-        <br/><p class="text">ninput(color: [str | nil]) -> table[num] - if color specified returns table of parent interactable powers; if no color - returns full table of powers</p>
+        <br/><p class="text">input(color: [smcolor | string | number | nil]) -> bool - input selector (if color specified); returns true if one on selected inputs is true else returns false</p>
+        <br/><p class="text">ninput(color: [smcolor | string | number | nil]) -> table[num] - if color specified returns table of parent interactable powers; if no color - returns full table of powers</p>
         <br/><p class="text">out(value: [num | bool]) - set power and active state of self.interactable</p>
         <br/><p class="text">loadstring(code: str, env: table|nil) -> function - make function from code</p>
         <br/><p class="text">load(chunk, chunkname, mode, lenv) -> function - make function from code (alternative to loadstring, works identically)</p>
