--- a/SComputers/gui.html
+++ b/SComputers/gui.html
@@ -173,6 +173,11 @@
             <li><span>guiobject:setFgColor(color) - sets the text color</span></li>
             <li><span>guiobject:setPbgColor(color) - sets the background color when clicked</span></li>
             <li><span>guiobject:setPfgColor(color) - sets the text color when clicked</span></li>
+            <li><span>guiobject:setPstColor(color) - sets the stroke color when clicked</span></li>
+            <li><span>guiobject:setIbgColor(color) - sets the color at the moment of interaction. it makes sense for toggle buttons, otherwise it will just replace pressed color</span></li>
+            <li><span>guiobject:setIfgColor(color) - sets the color at the moment of interaction. it makes sense for toggle buttons, otherwise it will just replace pressed color</span></li>
+            <li><span>guiobject:setIstColor(color) - sets the stroke color at the moment of interaction. it makes sense for toggle buttons, otherwise it will just replace pressed color</span></li>
+            
         </ul>
 
         <br/>
@@ -187,6 +192,10 @@
             <li><span>guiobject:setText(text:string) - sets text</span></li>
             <li><span>guiobject:setBgColor(color) - sets the background color</span></li>
             <li><span>guiobject:setFgColor(color) - sets the text color</span></li>
+            <li><span>guiobject:setStColor(color) - sets the stroke color</span></li>
+            <li><span>guiobject:setIbgColor(color) - sets the color at the moment of interaction</span></li>
+            <li><span>guiobject:setIfgColor(color) - sets the color at the moment of interaction</span></li>
+            <li><span>guiobject:setIstColor(color) - sets the stroke color at the moment of interaction</span></li>
         </ul>
 
         <br/>
@@ -194,6 +203,7 @@
         <ul class="list">
             <li><span>guiobject:setText(text:string) - sets text</span></li>
             <li><span>guiobject:setFgColor(color) - sets the text color</span></li>
+            <li><span>guiobject:setIfgColor(color) - sets the color at the moment of interaction</span></li>
         </ul>
 
         <br/>
@@ -202,6 +212,10 @@
             <li><span>guiobject:setText(text:string) - sets text</span></li>
             <li><span>guiobject:setBgColor(color(optionally, there may be nil for transparency)) - sets the background color</span></li>
             <li><span>guiobject:setFgColor(color) - sets the text color</span></li>
+            <li><span>guiobject:setStColor(color) - sets the stroke color</span></li>
+            <li><span>guiobject:setIbgColor(color) - sets the color at the moment of interaction</span></li>
+            <li><span>guiobject:setIfgColor(color) - sets the color at the moment of interaction</span></li>
+            <li><span>guiobject:setIstColor(color) - sets the stroke color at the moment of interaction</span></li>
         </ul>
 
         <br/>
