--- a/SComputers/lag_policy.html
+++ b/SComputers/lag_policy.html
@@ -12,9 +12,6 @@
 		</script>
     </head>
     <body>
-        
-                
-
         <p>
             SComputers has a lag-score mechanic that prevents lags from being called
             <br/>
@@ -22,8 +19,7 @@
         </p>
 
         <ul class="list">
-            <li><span>SComputers has excellent display optimization</span></li>
-            <li><span>however, your code can still cause lags if it uses too much CPU time</span></li>
+            <li><span>SComputers has excellent display optimization. however, your code can still cause lags if it uses too much CPU time</span></li>
             <li><span>the processor time available to your code is set in the permission tool</span></li>
             <li><span>if you exceed it, your computer will immediately terminate code execution with a "too long without yielding" error</span></li>
             <li><span>you can handle the error using pcall/xpcall/callback_error. however, if you exceed the code execution time several times in a row in a short period of time, then you will not be able to handle the error, as well as such a computer can no longer be restarted by sending a logical signal to the reboot gate or calling reboot from another computer</span></li>
