--- a/SComputers/styles.html
+++ b/SComputers/styles.html
@@ -20,9 +20,8 @@
         <p class="text">styles:</p>
         <ul class="list">
             <li><span>styles.switch - makes the button look like a switch</span></li>
+            <li><span>styles.rounded - makes a rounded button, label or textbox</span></li>
         </ul>
-
-        
 
         <br/>
         <p class="text">
@@ -56,6 +55,54 @@ function callback_loop()
     gui:tick()
 
     out(switch:getState())
+
+    if gui:needFlush() then
+        gui:draw()
+        display.flush()
+    end
+end</code>
+            </pre>
+        </p>
+
+                <br/>
+        <p class="text">
+            rounded style example
+            <pre>
+                <code class="language-lua" style="width: fit-content;">--example for display 128x96
+
+local display = getComponents("display")[1]
+display.reset()
+display.clearClicks()
+display.setSkipAtLags(false)
+display.setClicksAllowed(true)
+local rx, ry = display.getWidth(), display.getHeight()
+
+local gui = require("gui").new(display)
+local styles = require("styles")
+
+local scene = gui:createScene("7abfa0")
+local button = scene:createButton(16, 16, rx - 32, ry - 32, true, "ROUNDED!!", "444444", "ffffff", "44b300", "ffffff")
+button:setCustomStyle(styles.rounded)
+scene:select()
+
+--button.cornerRadius = 5 --you can set your own, but the default is 30 percent. the cornerRadius is set in pixels
+button:setStColor(0xffffff)
+button:setPstColor(0x03ca6e)
+--button:setIstColor(0x88ff88)
+--button:setIbgColor(0xffffff)
+--button:setIfgColor(0x000000)
+
+function callback_loop()
+    if _endtick then
+        display.clear()
+        display.flush()
+        out(false)
+        return
+    end
+
+    gui:tick()
+
+    out(button:getState())
 
     if gui:needFlush() then
         gui:draw()
