--- a/SComputers/addons.html
+++ b/SComputers/addons.html
@@ -194,9 +194,7 @@
 
                     </br>
                     <p class="cool-text">
-                        allows you to capture an image from your real monitor or game and stream it to other players via SComputers.</br>
-                        requires a betterAPI version of at least 44.</br>
-                        the mod is safe as betterAPI requires capture confirmation from the user.
+                        a set of different decorative gizmos for SComputers!
                     </p>
 
                     <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
