--- a/SComputers/display.html
+++ b/SComputers/display.html
@@ -127,6 +127,8 @@
             <li><span>display.fillWidePoly(color, width:number, round:boolean, x, y, x, y, ...) - fills the polygon, but allows you to adjust the width of the line and round it. in fact, it only makes sense if you want to round the polygon using a rounded line</span></li>
             <li><span>display.drawTriangle(x1, y1, x2, y2, x3, y3, color) - draws a triangle</span></li>
             <li><span>display.fillTriangle(x1, y1, x2, y2, x3, y3, color) - fills a triangle</span></li>
+            <li><span>display.drawEllipse(x, y, sizeX, sizeY, cornerRadius, color) - draws an ellipse within the specified square frame</span></li>
+            <li><span>display.fillEllipse(x, y, sizeX, sizeY, cornerRadius, color) - fills an ellipse within the specified square frame</span></li>
             <li><span>display.flush() - sends the changes to the display. however, please note that your changes may be "lost" if the skipAtNotSight(this is disabled by default) flag is set and the player is not looking at the display. resets the viewport after sending</span></li>
             <li><span>display.forceFlush() - sends the changes to the display. ensures that the image reaches the recipient. it ONLY makes sense if setSkipAtNotSight mode is enabled, but you still want to update the image for all users. doesn't make sense in others</span></li>
             <br/>
@@ -148,6 +150,25 @@
             <li><span>display.setHoloScale(x, y) - sets the scale of the hologram. the maximum scale is 5</span></li>
             <li><span>display.getHoloScale():x, y - returns the value set using display.setScale</span></li>
         </ul>
+
+        <pre>
+            <code class="language-lua" style="width: fit-content;">--ellipse example
+local display = getComponent("display")
+display.reset()
+local rx, ry = display.getSize()
+
+display.clear()
+display.fillEllipse(16, 16, rx - 32, ry - 32, 15, 0xff0000)
+display.drawEllipse(16, 16, rx - 32, ry - 32, 15, 0xff00ff)
+display.flush()
+
+function callback_loop()
+    if _endtick then
+        display.clear()
+        display.flush()
+    end
+end</code>
+        </pre>
 
         <pre>
             <code class="language-lua" style="width: fit-content;">--example for display 256x256
