--- a/SComputers/index.html
+++ b/SComputers/index.html
@@ -22,7 +22,9 @@
             </br>
             <button class="cool-button purple" id="installButton" style="display: none;">install SComputers application</button>
             <button class="cool-button gray" id="theme-toggle">change theme</button>
+            </br>
             <button class="cool-button blue" onclick="window.location.href = './scmframework.html'">scmframework</button>
+            <button class="cool-button blue" onclick="window.location.href = './canvasAPI.html'">canvasAPI</button>
             
             </br>
             <div class="cool-text">
