scomputers docs update

--- a/SComputers/canvasAPI.html
+++ b/SComputers/canvasAPI.html
@@ -28,6 +28,34 @@
             </p>
 
             <br/>
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <center>
+                    <h2>NES Emulator</h2>
+                    <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3353025650">
+                        <img src="addons/nes.jpg" class="image" />
+                    </a>
+
+                    </br>
+                    <p class="cool-text">
+                        this mod allows you to emulate your favorite games from the NES platform right inside Scrap Mechanic!</br>
+                        this is a real emulator running inside the game, you can even connect a second controller and play with your friends!</br>
+                        just connect the console to the display and the joysticks to the console. insert the cartridge and play the NES right inside Scrap Mechanic!</br>
+                        unfortunately, due to the restricted API of the game, when pressing several buttons in the joystick GUI, bugs sometimes occur and other buttons are released. if you install betterAPI, the button processing works fine, otherwise it is better to connect the controller with the seat.</br>
+                        you can connect the joystick to the seat to control the game from it. to import other control buttons, use the "Control Import" unit and connect it to the joystick.</br>
+                        to upload your games, there is a "flash cartridge" that requires betterAPI. press 0 on the joystick to open the folder where you can to add games (host only).</br>
+                        to emulate sound, there is a "speaker" block. betterAPI is needed for its operation.
+                    </p>
+
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(23, 233, 125);">a mod based on <a class="hyper" href="./canvasAPI.html">canvasAPI</a></span>
+                    </div>
+
+                    </br>
+                    <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3353025650', '_blank').focus();">download mod from steam</button>
+                </center>
+            </div>
+
+            <br/>
             <div class="cool-text">
                 <center>
                     <h3>installation</h3>
