--- a/SComputers/index.html
+++ b/SComputers/index.html
@@ -23,8 +23,9 @@
             <button class="cool-button purple" id="installButton" style="display: none;">install SComputers application</button>
             <button class="cool-button gray" id="theme-toggle">change theme</button>
             </br>
-            <button class="cool-button blue" onclick="window.location.href = './scmframework.html'">scmframework</button>
-            <button class="cool-button blue" onclick="window.location.href = './canvasAPI.html'">canvasAPI</button>
+            <button class="cool-button purple" onclick="window.location.href = './scmframework.html'">scmframework</button>
+            <button class="cool-button purple" onclick="window.location.href = './canvasAPI.html'">canvasAPI</button>
+            <button class="cool-button purple" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3009550168', '_blank').focus();">SComputers Integrable</button>
             
             </br>
             <div class="cool-text">
