--- a/SComputers/scmframework.html
+++ b/SComputers/scmframework.html
@@ -42,6 +42,32 @@
             </p>
 
             <br/>
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <center>
+                    <h2>scmframework demo</h2>
+                    <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3487509409">
+                        <img src="addons/scmframework_demo.jpg" class="image" />
+                    </a>
+
+                    </br>
+                    <p class="cool-text">
+                        this mod demonstrates the capabilities of scmframework</br>
+                        the scmframework allows you to use SComputers features inside your mods</br>
+                        it's completely free and anyone can use the scmframework to create their own mods</br>
+                        if you only need displays from SComputers, then you can use canvasAPI</br>
+                        the scmframework contains canvasAPI inside itself
+                    </p>
+
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(23, 233, 198);">a mod based on <a class="hyper" href="./scmframework.html">scmframework</a></span>
+                    </div>
+
+                    </br>
+                    <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3487509409', '_blank').focus();">download mod from steam</button>
+                </center>
+            </div>
+
+            <br/>
             <div class="cool-text">
                 <center>
                     <h3>scmframework api</h3>
