--- a/SComputers/contact_me.html
+++ b/SComputers/contact_me.html
@@ -11,12 +11,15 @@
             you can contact me if you find a bug, have an idea, or need help.
         </p>
 
-        <p class="text">communication methods:</p>
-        <ul class="list">
-            <li><span>discord: smlogic</span></li>
-            <li><span>discord server: <a target="_blank" class="hyper" href="https://discord.gg/uJrsmUjaMG">sm coders community</a></span></li>
-            <li><span>steam profile: <a target="_blank" class="hyper" href="https://steamcommunity.com/profiles/76561198977226540">BananaPen</a></span></li>
-        </ul>
+        <h1 class="text">communication methods:</h1>
+        <div style="margin-left: auto; display: flex;">
+            <div class="image-button" style="margin-right: 10px;" onclick="window.open('https://discord.com/users/804098593002618881', '_blank');"><img src="icons/discord.png"/></div>
+            <div class="image-button" style="margin-right: 10px;" onclick="window.open('https://discord.gg/uJrsmUjaMG', '_blank');"><img src="icons/discord_server.png"/></div>
+            <div class="image-button" style="margin-right: 10px;" onclick="window.open('https://steamcommunity.com/profiles/76561198977226540/', '_blank');"><img src="icons/steam.png"/></div>
+            <div class="image-button" style="margin-right: 10px;" onclick="window.open('https://github.com/igorkll', '_blank');"><img src="icons/github.png"/></div>
+            <div class="image-button" style="margin-right: 10px;" onclick="window.open('https://boosty.to/bananapen', '_blank');"><img src="icons/boosty.png"/></div>
+            <div class="image-button" style="margin-right: 10px;" onclick="window.open('https://igorkll.github.io/logichub', '_blank');"><img src="icons/logichub.png"/></div>
+        </div>
     
         <script src="main.js"></script>
     </body>
