added winbox maker project

--- a/logichub/index.html
+++ b/logichub/index.html
@@ -146,6 +146,30 @@
             </br>
             <div class="cool-frame" style="width: 70%; max-width: 1200px;">
                 <center>
+                    <h2>WinBox Maker</h2>
+                    <img src="https://raw.githubusercontent.com/igorkll/WinBox-Maker/refs/heads/master/preview.png" class="image"/>
+
+                    </br>
+                    <div class="cool-text">
+                        a tool for creating minimal embed versions of windows</br>
+                        takes on the task of modifying the windows image to remove excess and embed software there</br>
+                        the program is perfect for windows builds designed for ATM terminals and other devices that unauthorized people have access to and should not be allowed to leave the specified sandbox</br>
+                        the program needs to be run with administrator rights because it mounts images</br>
+                        the program is primarily aimed at creating Windows images for operation in kiosk mode, that is, the user will have access to only one of your programs that you add to the image and nothing more</br>
+                        however, the program can be used in other usage scenarios (for example, creating a TV set-top box or a Windows-based slot machine)</br>
+                        please note that the program requires the "dism" utility. usually it is built into Windows</br>
+                        the program is recommended to be used with the original English image of "Windows 10 Enterprise"</br>
+                        please note that winbox maker does not provide Windows images, it only provides a tool for reassembling Windows for use in kiosk mode</br>
+                    </div>
+
+                    </br>
+                    <button class="cool-button red" onclick="window.open('https://github.com/igorkll/WinBox-Maker', '_blank').focus();">project page</button>
+                </center>
+            </div>
+
+            </br>
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <center>
                     <h2>esp32 opencomputers</h2>
                     <img src="images/temporarily_unavailable.png" class="image"/>
 
