--- a/logichub/index.html
+++ b/logichub/index.html
@@ -14,6 +14,7 @@
             <h1 style="margin: 5px;">Logic Hub</h1>
             <div id="google_translate_element" style="position: absolute;top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
             <div style="margin-left: auto; display: flex;">
+                <div class="image-button" onclick="window.open('https://www.youtube.com/@ololololo-l5z', '_blank');"><img src="icons/youtube.png"/></div>
                 <div class="image-button" onclick="window.open('https://discord.com/users/804098593002618881', '_blank');"><img src="icons/discord.png"/></div>
                 <div class="image-button" onclick="window.open('https://discord.gg/uJrsmUjaMG', '_blank');"><img src="icons/discord_server.png"/></div>
                 <div class="image-button" onclick="window.open('https://steamcommunity.com/profiles/76561198977226540/', '_blank');"><img src="icons/steam.png"/></div>
