--- a/logichub/index.html
+++ b/logichub/index.html
@@ -35,6 +35,10 @@
             
             </br>
             <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <div class="langs-container">
+                    <img class="icon" src="langs/lua.png"/>
+                </div>
+
                 <center>
                     <h2>SComputers</h2>
                     <img src="images/SComputers.png" class="image"/>
@@ -67,6 +71,13 @@
 
             </br>
             <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <div class="langs-container">
+                    <img class="icon" src="langs/lua.png"/>
+                    <img class="icon" src="langs/python.png"/>
+                    <img class="icon" src="langs/cpp.png"/>
+                    <img class="icon" src="langs/cs.png"/>
+                </div>
+
                 <center>
                     <h2>betterAPI</h2>
                     <img src="images/betterAPI.jpg" class="image"/>
@@ -94,6 +105,10 @@
 
             </br>
             <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <div class="langs-container">
+                    <img class="icon" src="langs/lua.png"/>
+                </div>
+
                 <center>
                     <h2>NES Emulator</h2>
                     <img src="images/NES_Emulator.jpg" class="image"/>
@@ -127,6 +142,12 @@
 
             </br>
             <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <div class="langs-container">
+                    <img class="icon" src="langs/lua.png"/>
+                    <img class="icon" src="langs/cs.png"/>
+                    <img class="icon" src="langs/python.png"/>
+                </div>
+
                 <center>
                     <h2>Scrap Mechanic Server</h2>
                     <img src="images/smserver.png" class="image"/>
@@ -147,6 +168,10 @@
             </br>
             <a name="winbox"></a>
             <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <div class="langs-container">
+                    <img class="icon" src="langs/cs.png"/>
+                </div>
+
                 <center>
                     <h2>WinBox Maker</h2>
                     <img src="https://raw.githubusercontent.com/igorkll/WinBox-Maker/refs/heads/master/preview.png" class="image"/>
@@ -171,6 +196,11 @@
 
             </br>
             <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <div class="langs-container">
+                    <img class="icon" src="langs/c.png"/>
+                    <img class="icon" src="langs/lua.png"/>
+                </div>
+
                 <center>
                     <h2>esp32 opencomputers</h2>
                     <img src="images/temporarily_unavailable.png" class="image"/>
@@ -187,6 +217,10 @@
 
             </br>
             <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <div class="langs-container">
+                    <img class="icon" src="langs/lua.png"/>
+                </div>
+
                 <center>
                     <h2>os in opencomputers - liked</h2>
                     <img src="images/temporarily_unavailable.png" class="image"/>
