added programs logos

--- a/logichub/index.html
+++ b/logichub/index.html
@@ -39,6 +39,10 @@
                     <img class="icon" src="langs/lua.png"/>
                 </div>
 
+                <div class="icons-container">
+                    <img class="iconL" src="logos/SComputers.png"/>
+                </div>
+
                 <center>
                     <h2>SComputers</h2>
                     <img src="images/SComputers.png" class="image"/>
@@ -76,6 +80,10 @@
                     <img class="icon" src="langs/python.png"/>
                     <img class="icon" src="langs/cpp.png"/>
                     <img class="icon" src="langs/cs.png"/>
+                </div>
+
+                <div class="icons-container">
+                    <img class="iconL" src="logos/betterAPI.png"/>
                 </div>
 
                 <center>
@@ -148,6 +156,10 @@
                     <img class="icon" src="langs/python.png"/>
                 </div>
 
+                <div class="icons-container">
+                    <img class="iconL" src="logos/smserver.png"/>
+                </div>
+
                 <center>
                     <h2>Scrap Mechanic Server</h2>
                     <img src="images/smserver.png" class="image"/>
@@ -170,6 +182,10 @@
             <div class="cool-frame" style="width: 70%; max-width: 1200px;">
                 <div class="langs-container">
                     <img class="icon" src="langs/cs.png"/>
+                </div>
+
+                <div class="icons-container">
+                    <img class="iconL" src="logos/winbox.png"/>
                 </div>
 
                 <center>
