--- a/logichub/index.html
+++ b/logichub/index.html
@@ -207,6 +207,7 @@
 
                     </br>
                     <button class="cool-button red" onclick="window.open('https://github.com/igorkll/WinBox-Maker', '_blank').focus();">project page</button>
+                    <button class="cool-button green" onclick="downloadRelease('WinBox-Maker')">download release</button>
                 </center>
             </div>
 
@@ -228,6 +229,7 @@
 
                     </br>
                     <button class="cool-button red" onclick="window.open('https://github.com/igorkll/esp32_opencomputers', '_blank').focus();">project page</button>
+                    <button class="cool-button green" onclick="downloadRelease('esp32_opencomputers')">download release</button>
                 </center>
             </div>
 
