update project list

--- a/logichub/index.html
+++ b/logichub/index.html
@@ -178,6 +178,80 @@
             </div>
 
             </br>
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <div class="langs-container">
+                    <img class="icon" src="langs/lua.png"/>
+                </div>
+
+                <center>
+                    <h2>Robotization</h2>
+                    <img src="images/robotization.jpg" class="image"/>
+
+                    </br>
+                    <div class="cool-text">
+                        this mod allows you to create autopiloted cars/aircraft.</br>
+                        this mod can be guided in different ways and on different objects: tags, players, units, creations, etc.</br>
+                        it can be guided to a specific position specified by numerical logic.</br>
+                        a block with a specific uuid (guidance on the uuid has not yet been done).</br>
+                        </br>
+                        this mod is designed to work in conjunction with "The modpack" or another mod that allows you to work with numbers.</br>
+                        crafting recipes will be added soon.</br>
+                        if a bug is found, I strongly ask you to write in the comments (and it will be fixed soon).</br>
+                        </br>
+                        returns to the past at the time of 0.3.5))
+                    </div>
+
+                    </br>
+                    <button class="cool-button red" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=2936300656', '_blank').focus();">project page</button>
+                </center>
+            </div>
+
+            </br>
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <div class="langs-container">
+                    <img class="icon" src="langs/lua.png"/>
+                </div>
+
+                <center>
+                    <h2>Pocket Universe</h2>
+                    <img src="images/pocket_universe.jpg" class="image"/>
+
+                    </br>
+                    <div class="cool-text">
+                        this mod allows you to create a separate small world in one block!</br>
+                        they can be used to make a magic circuit in one block!</br>
+                        please note that it is highly discouraged to use bearings inside the pocket universe, and IN ANY CASE, it is impossible to use loose parts!
+                    </div>
+
+                    </br>
+                    <button class="cool-button red" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3088831605', '_blank').focus();">project page</button>
+                </center>
+            </div>
+
+            </br>
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <div class="langs-container">
+                    <img class="icon" src="langs/lua.png"/>
+                </div>
+
+                <center>
+                    <h2>Wired & Wireless Cameras</h2>
+                    <img src="images/wired_wireless_cameras.jpg" class="image"/>
+
+                    </br>
+                    <div class="cool-text">
+                        Adds cameras to the game with the ability to set a password and connect to them via a monitor.</br>
+                        you can even control the creation through the camera!</br>
+                        there are no visual distortions when the camera is moving.</br>
+                        the cameras can be connected directly or wirelessly.
+                    </div>
+
+                    </br>
+                    <button class="cool-button red" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3034272798', '_blank').focus();">project page</button>
+                </center>
+            </div>
+
+            </br>
             <a name="winbox"></a>
             <div class="cool-frame" style="width: 70%; max-width: 1200px;">
                 <div class="langs-container">
@@ -233,6 +307,7 @@
                 </center>
             </div>
 
+            <!--
             </br>
             <div class="cool-frame" style="width: 70%; max-width: 1200px;">
                 <div class="langs-container">
@@ -252,6 +327,7 @@
                     <button class="cool-button red" onclick="window.open('https://github.com/igorkll/liked', '_blank').focus();">project page</button>
                 </center>
             </div>
+            -->
         </center>
     
         <script async src="https://cse.google.com/cse.js?cx=319af69f537d9450e"></script>
