--- a/logichub/index.html
+++ b/logichub/index.html
@@ -252,8 +252,7 @@
             </div>
 
             </br>
-            <a name="winbox"></a>
-            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+            <div class="cool-frame" id="winbox" style="width: 70%; max-width: 1200px;">
                 <div class="langs-container">
                     <img class="icon" src="langs/cs.png"/>
                 </div>
